training/traffic-split/web-apex.yml
apiVersion: v1
kind: Service
metadata:
  name: web-apex
  namespace: emojivoto
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: web-apex
  type: ClusterIP
